--- a/Code/Miscellaneous/Image Dataset Creator.ipynb
+++ b/Code/Miscellaneous/Image Dataset Creator.ipynb
@@ -2,478 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "abe77323",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Frames per second using video.get(cv2.CAP_PROP_FPS) : 30\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  True\n",
-      "Read a new frame:  False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import os\n",
-    "video_name = 'অ.mp4'    #switch the name of the video with the alphabet of BSL manually\n",
-    "vidcap = cv2.VideoCapture(video_name)\n",
-    "success,image = vidcap.read()\n",
-    "count = 0\n",
-    "num_frames = 0\n",
-    "image_name = str(video_name[0])\n",
+    "#Point the directory to a folder eith only videos nothing else.\n",
+    "parent_dir= \"C:/Users/Lenovo/Documents/Python Scripts/Videos\"\n",
     "\n",
-    "parent_dir= \"C:/Users/Lenovo/Documents/Python Scripts\"\n",
-    "directory = image_name\n",
-    "path = os.path.join(parent_dir, directory)\n",
-    "os.mkdir(path)\n",
-    "\n",
-    "#Changing main working directory python\n",
-    "os.chdir(path)\n",
-    "\n",
-    "fps = vidcap.get(cv2.CAP_PROP_FPS)\n",
-    "fps = round(fps)\n",
-    "\n",
-    "print(\"Frames per second using video.get(cv2.CAP_PROP_FPS) : {0}\".format(fps))\n",
-    "    \n",
-    "while success:\n",
-    "    num_frames += 1\n",
-    "    success,image = vidcap.read()\n",
-    "    print('Read a new frame: ', success)\n",
-    "    \n",
-    "    if num_frames%2 == 0:   #Saving every even numbered frame \n",
-    "        count += 1\n",
-    "        cv2.imwrite(\"%s%d.jpg\"% (image_name, count), image)\n",
-    "    \n",
-    "    #if num_frames == fps*10:   #breaking the video after 10s\n",
-    "     #   break\n",
-    "os.chdir(parent_dir)"
+    "dirArr = os.listdir(parent_dir)\n",
+    "dirArr"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0833b64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in dirArr:\n",
+    "    num_frames = 0\n",
+    "    count = 0\n",
+    "\n",
+    "    vidcap = cv2.VideoCapture(i)\n",
+    "    success,image = vidcap.read()\n",
+    "    \n",
+    "    base = i\n",
+    "    image_name = os.path.splitext(base)[0]\n",
+    "    print(image_name)\n",
+    "    \n",
+    "    directory= image_name\n",
+    "    path = os.path.join(parent_dir, directory)\n",
+    "    os.mkdir(path)\n",
+    "    \n",
+    "    #Changing main working directory python\n",
+    "    os.chdir(path)\n",
+    "    \n",
+    "    fps = vidcap.get(cv2.CAP_PROP_FPS)\n",
+    "    fps = round(fps)\n",
+    "\n",
+    "    print(\"Frames per second using video.get(cv2.CAP_PROP_FPS) : {0}\".format(fps))\n",
+    "\n",
+    "    while success:\n",
+    "        num_frames += 1\n",
+    "        success,image = vidcap.read()\n",
+    "        print('Read a new frame: ', success)\n",
+    "\n",
+    "        if num_frames%2 == 0:   #Saving every even numbered frame \n",
+    "            count += 1\n",
+    "            cv2.imwrite(\"%s%d.jpg\"% (image_name, count), image)\n",
+    "\n",
+    "        #if num_frames == fps*10:   #breaking the video after 10s\n",
+    "         #   break\n",
+    "    os.chdir(parent_dir)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1a3d5a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
