--- a/Code/Miscellaneous/VideoWriter.ipynb
+++ b/Code/Miscellaneous/VideoWriter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4d9e4c32",
    "metadata": {},
    "outputs": [],
@@ -14,15 +14,14 @@
     "import keyboard\n",
     "\n",
     "#Write you name here\n",
-    "user = 'R'\n",
-    "\n",
-    "#Press X to stop recording\n",
+    "user = ''\n",
+    "#Press X to record while X key is pressed\n",
     "#Press R to start next recording"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7f55a308",
    "metadata": {},
    "outputs": [],
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "20ef62fc",
    "metadata": {},
    "outputs": [],
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d13ba776",
    "metadata": {},
    "outputs": [],
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "64461951",
    "metadata": {},
    "outputs": [],
@@ -102,15 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ef35b813",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cap = cv2.VideoCapture(0)\n",
+    "cap = cv2.VideoCapture(1)\n",
     "dims = get_dims(cap, res = my_res)\n",
     "\n",
-    "# Define the codec and create VideoWriter object.The output is stored in 'outpy.avi' file.\n",
+    "# Define the codec and create VideoWriter object.The output is stored in 'output.avi' file.\n",
     "# Define the fps to be equal to 30. Also frame size is passed.\n",
     "#frame_width = int(cap.get(3))\n",
     "#frame_height = int(cap.get(4))\n",
@@ -123,22 +122,16 @@
    "id": "17825836",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "count = 0"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c4aeb8d7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting Video for nothing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for label in labels:\n",
     "    \n",
@@ -150,9 +143,9 @@
     "    frame_width = 200\n",
     "    frame_height = 200\n",
     "    #print(frame_width, frame_height) \n",
-    "    out = cv2.VideoWriter('%s_%s.avi'%(user,label),cv2.VideoWriter_fourcc('M','J','P','G'), 30, (frame_width,frame_height))\n",
+    "    out = cv2.VideoWriter('%s%s.avi'%(user,label),cv2.VideoWriter_fourcc('M','J','P','G'), 30, (frame_width,frame_height))\n",
     "    \n",
-    "    print('Collecting Video for {}'.format(label))\n",
+    "    print('Collecting Images for {}'.format(label))\n",
     "    #time.sleep(30)\n",
     "    \n",
     "       \n",
@@ -173,22 +166,31 @@
     "        crop_frame = cv2.resize(crop_frame, (200, 200))\n",
     "        \n",
     "        #record video\n",
-    "        out.write(crop_frame)\n",
+    "        #out.write(crop_frame)\n",
     "\n",
     "        frame = cv2.flip(frame, 1)\n",
-    "        image = cv2.putText(frame, '%s'%label, (50,50), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2, cv2.LINE_AA)\n",
+    "        image = cv2.putText(frame, 'Collecting Video for {}'.format(label), (50,50), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2, cv2.LINE_AA)\n",
     "        cv2.imshow('frame',frame)\n",
     "\n",
     "        # Check if x was pressed\n",
     "        if keyboard.is_pressed('x'):\n",
-    "            print('x Key was pressed')\n",
-    "            out.release\n",
-    "            \n",
+    "            #print('x Key was pressed')\n",
+    "            #record video\n",
+    "            out.write(crop_frame)\n",
+    "          \n",
+    "        \n",
     "            \n",
     "        # Check if r was pressed\n",
     "        if cv2.waitKey(1) & 0xFF == ord('r'):\n",
     "            print('r Key was pressed')\n",
+    "            out.release\n",
     "            break\n",
+    "            \n",
+    "        #Check if r was pressed\n",
+    "        if cv2.waitKey(1) & 0xFF == ord('c'):\n",
+    "            print('c Key was pressed')\n",
+    "            count=count+1\n",
+    "            \n",
     "        \n",
     "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "            flag = False\n",
@@ -207,6 +209,14 @@
    "cell_type": "raw",
    "id": "eca5929d",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c777357",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
