Updates to BSL CNN - 4
For better model generalization
-Added random rotation
-Changed to SGD optimizer

--- a/Code/BSL/BSL CNN - 4.ipynb
+++ b/Code/BSL/BSL CNN - 4.ipynb
@@ -43,6 +43,7 @@
    "source": [
     "transform = tt.Compose(\n",
     "    [\n",
+    "        tt.RandomRotation(degrees=15),\n",
     "        tt.Resize(64), #was 32\n",
     "        tt.Grayscale(num_output_channels=1),\n",
     "        tt.ToTensor(),\n",
@@ -281,6 +282,7 @@
     "            nn.BatchNorm2d(512),\n",
     "            nn.ReLU(),\n",
     "            nn.MaxPool2d(2, 2),  # output: 512 x 2 x 2\n",
+    "            nn.Dropout(0.50),\n",
     "            \n",
     "            nn.Flatten(),\n",
     "            nn.Linear(512*2*2, 39)) \n",
@@ -360,7 +362,7 @@
    "outputs": [],
    "source": [
     "num_epochs = 30\n",
-    "opt_func = torch.optim.Adam\n",
+    "opt_func = torch.optim.SGD\n",
     "lr = 0.001"
    ]
   },
