--- a/Code/ASL/Camera CNN 4.7.ipynb
+++ b/Code/ASL/Camera CNN 4.7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,28 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = ASLModel()\n",
-    "model.load_state_dict(torch.load(r\"D:\\zzStudies\\CSE499\\GitHub\\CSE499-Group01-ASL-and-BSL-Translations-using-CNN\\Code\\ASL\\CNN0.pth\", map_location=torch.device('cpu')))"
+    "model.load_state_dict(torch.load(r\".\\CNN0.pth\", map_location=torch.device('cpu')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,10 +213,12 @@
     "    resultimage = np.zeros((128, 128))\n",
     "    normalizednp = cv2.normalize(grayscale, resultimage, 0, 1, cv2.NORM_MINMAX)\n",
     "    cv2.imshow('Normalized Image', normalizednp)\n",
+    "    normalizednp = np.array(normalizednp, dtype=np.float32)\n",
+    "    normalizednp = np.reshape(img, (1, 128, 128, 1))\n",
     "    #converting to tensor from np_ndarray\n",
     "    x = torch.from_numpy(normalizednp)\n",
     "    #converting to float32\n",
-    "    x = x.type(torch.float32)\n",
+    "    #x = x.type(torch.float32)\n",
     "    \n",
     "\n",
     "    #print(x.view(1, 3, 64, 64))    \n",
