--- a/Code/ASL/Camera CNN 4.7.ipynb
+++ b/Code/ASL/Camera CNN 4.7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,9 +80,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = ASLModel()\n",
     "model.load_state_dict(torch.load(r\".\\CNN0.pth\", map_location=torch.device('cpu')))"
@@ -90,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +225,7 @@
     "    normalizednp = cv2.normalize(grayscale, resultimage, 0, 1, cv2.NORM_MINMAX)\n",
     "    cv2.imshow('Normalized Image', normalizednp)\n",
     "    normalizednp = np.array(normalizednp, dtype=np.float32)\n",
-    "    normalizednp = np.reshape(img, (1, 128, 128, 1))\n",
+    "    normalizednp = np.reshape(normalizednp, (1, 128, 128, 1))\n",
     "    #converting to tensor from np_ndarray\n",
     "    x = torch.from_numpy(normalizednp)\n",
     "    #converting to float32\n",
